# djongo-tracks

./: .editorconfig  .gitignore  pyproject.toml  readme.md
app/: schema.py  settings.py  urls.py
tracks/: admin.py  apps.py  models.py  schema.py  settings.py  urls.py
tracks/fixtures/: tracks.json
tracks/migrations/: 0001_initial.py  0002_track_posted_by.py  0003_like.py
users/: schema.py
