[tool.poetry]
authors = ["ibqn"]
description = ""
name = "djongo-tracks"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^3.1.7"
django-graphql-jwt = {git = "git@github.com:ibqn/django-graphql-jwt.git"}
djongo = {git = "git@github.com:nesdis/djongo.git"}
graphene-django = {version = "^3.0.0b7", allow-prereleases = true}
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
