[tool.poetry]
authors = ["ibqn"]
description = ""
name = "djongo-tracks"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^3.1.7"
PyJWT = "1.7.1"
djongo = {git = "git@github.com:nesdis/djongo.git"}
python = "^3.8"
graphene-django = "^2.15.0"
django-graphql-jwt = "^0.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
