[tool.poetry]
authors = ["ibqn"]
description = ""
name = "djongo-tracks"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^3.2"
django-graphql-jwt = "^0.3.2"
djongo = {git = "git@github.com:nesdis/djongo.git"}
graphene-django = "^3.0.0b1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
